Jan 08, 2014 - chris ---------------------------------------------------
o Removed HAM_CACHE_STRICT, HAM_CACHE_FULL and the related functionalities

Jan 05, 2014 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.4

Jan 01, 2014 - chris ---------------------------------------------------
o Default Btree node layout now also stores duplicate keys inline, even
	if they're > 8 bytes (previous versions stored duplicate keys in a
	separate blob, which required lots of additional I/O)

Nov 23, 2013 - chris ---------------------------------------------------
o Default Btree node layout for variable length keys can now store
	fixed length records inline if they're small enough (and if duplicate
	keys are disabled)

Nov 22, 2013 - chris ---------------------------------------------------
o Default Btree node layout for variable length keys and duplicate keys
	was completely rewritten and now uses an up-front index in the
	node
o C++ API: Can now specify HAM_RECORD_USER_ALLOC when retrieving keys
	with ham_db_find

Nov 05, 2013 - chris ---------------------------------------------------
o Removed HAM_DISABLE_VARIABLE_KEYS, HAM_ENABLE_EXTENDED_KEYS; they're no
	longer required. Introduced HAM_KEY_SIZE_UNLIMITED for unlimited/variable
	length keys (the default)

Oct 31, 2013 - chris ---------------------------------------------------
o ham_bench now can generate keys from /usr/share/dict/words

Oct 25, 2013 - chris ---------------------------------------------------
o Added HAM_PARAM_RECORD_SIZE to specify a fixed record size; if it's small
	enough, the records are stored in the leaf and not in a separately
	allocated blob

Oct 22, 2013 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.3

Oct 18, 2013 - chris ---------------------------------------------------
o Introduced a new Btree node layout for fixed length keys types which