@@ -477,8 +477,8 @@ ham_get_license(const char **licensee, const char **product);
  * Creates a Database Environment
  *
  * A Database Environment is a collection of Databases, which are all stored
- * in one physical file (or in-memory). By default, up to 16 Databases can be
- * stored in one file.
+ * in one physical file (or in-memory). The maximum number of Databases
+ * depends on the page size; the default is above 600.
  *
  * Each Database in an Environment is identified by a positive 16bit
  * value (except 0 and values at or above 0xf000).
@@ -539,8 +539,6 @@ ham_get_license(const char **licensee, const char **product);
  *      bytes. It is recommended not to change the default size. The
  *      default size depends on hardware and operating system.
  *      Page sizes must be 1024 or a multiple of 2048.
- *    <li>@ref HAM_PARAM_MAX_DATABASES</li> The number of maximum
- *      Databases in this Environment; default value: 16.
  *    <li>@ref HAM_PARAM_LOG_DIRECTORY</li> The path of the log file
  *      and the journal files; default is the same path as the database
  *      file. Ignored for remote Environments.
@@ -554,9 +552,6 @@ ham_get_license(const char **licensee, const char **product);
  * @return @ref HAM_SUCCESS upon success
  * @return @ref HAM_INV_PARAMETER if the @a env pointer is NULL or an
  *        invalid combination of flags or parameters was specified
- * @return @ref HAM_INV_PARAMETER if the value for
- *        @ref HAM_PARAM_MAX_DATABASES is too high (either decrease
- *        it or increase the page size)
  * @return @ref HAM_IO_ERROR if the file could not be opened or
  *        reading/writing failed
  * @return @ref HAM_INV_FILE_VERSION if the Environment version is not
@@ -583,9 +578,7 @@ ham_env_create(ham_env_t **env, const char *filename,
  * This function opens an existing Database Environment.
  *
  * A Database Environment is a collection of Databases, which are all stored
- * in one physical file (or in-memory). By default, up to 16 Databases can be
- * stored in one file (see @ref ham_env_create on how to store even more
- * Databases).
+ * in one physical file (or in-memory).
  *
  * Each Database in an Environment is identified by a positive 16bit
  * value (except 0 and values at or above 0xf000).
@@ -696,8 +689,8 @@ ham_env_get_parameters(ham_env_t *env, ham_parameter_t *param);
 /**
  * Creates a new Database in a Database Environment
  *
- * An Environment can contain up to 16 Databases, unless higher values are
- * configured when the Environment is created (see @sa ham_env_create).
+ * An Environment can contain a (limited) amount of Databases; the exact
+ * limit depends on the page size and is above 600.
  *
  * Each Database in an Environment is identified by a positive 16bit
  * value. 0 and values at or above 0xf000 are reserved.
@@ -804,7 +797,6 @@ ham_env_get_parameters(ham_env_t *env, ham_parameter_t *param);
  * @return @ref HAM_OUT_OF_MEMORY if memory could not be allocated
  * @return @ref HAM_LIMITS_REACHED if the maximum number of Databases per
  *        Environment was already created
- * @return @ref HAM_DATABASE_ALREADY_OPEN if @a db is already in use
  */
 HAM_EXPORT ham_status_t HAM_CALLCONV
 ham_env_create_db(ham_env_t *env, ham_db_t **db,
@@ -845,7 +837,6 @@ ham_env_create_db(ham_env_t *env, ham_db_t **db,
  * @return @ref HAM_DATABASE_ALREADY_OPEN if this Database was already
  *        opened
  * @return @ref HAM_OUT_OF_MEMORY if memory could not be allocated
- * @return @ref HAM_DATABASE_ALREADY_OPEN if @a db is already in use
  */
 HAM_EXPORT ham_status_t HAM_CALLCONV
 ham_env_open_db(ham_env_t *env, ham_db_t **db,
@@ -1596,8 +1587,8 @@ ham_db_get_parameters(ham_db_t *db, ham_parameter_t *param);
 /* deprecated */
 #define HAM_PARAM_KEYSIZE               HAM_PARAM_KEY_SIZE
 
-/** Parameter name for @ref ham_env_create; sets the number of maximum
- * Databases */
+/** Parameter name for @ref ham_env_get_parameters; retrieves the number
+ * of maximum Databases */
 #define HAM_PARAM_MAX_DATABASES         0x00000103
 
 /** Parameter name for @ref ham_env_create_db; sets the key type */
